# protopuf

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  test.cpp
.github/workflows/: build.yml  ci.yml  doc.yml
googletest/: CMakeLists.txt.in
include/: byte.h  coder.h  int.h  varint.h  zigzag.h
include/protopuf/: array.h  bool.h  byte.h  coder.h  coder_mode.h  constant.h  enum.h  field.h  fixed_string.h  float.h  int.h  map.h  message.h  reflection.h  skip.h  varint.h  zigzag.h
test/: array.cpp  bool.cpp  coder.cpp  enum.cpp  fixed_string.cpp  float.cpp  int.cpp  map.cpp  message.cpp  reflection.cpp  skip.cpp  test_fixture.h  varint.cpp  zigzag.cpp
test/benchmark/: CMakeLists.txt  main.cpp  message.proto
test/compatibility/: CMakeLists.txt  main.cpp  test_fixture.h
